@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.442 2007-08-07 13:14:04 sb Exp $
+# $Id: CHANGES,v 1.443 2007-08-09 23:33:46 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,7 +10,10 @@
 # --
 
 2.2.3 (2007/??/??)
- - (2007/08/07) Fixed bug# 2118 - Fixed typo in german translation
+ - (2007/08/10) Fixed bug# 2155 - Std-Attachments are not usable in agent
+    ticket compose screen (no std attachments are shown in compose screen).
+ - (2007/08/07) Fixed bug# 2118 - Fixed typo in german translation file (
+    Kernel/Language/de.pm).
  - (2007/08/07) Fixed bug# 2117 - Fixed small typo in initial insert files.
  - (2007/08/06) Fixed bug# 1999 - Service and SLA can not changed on an
     existing ticket.
